updated css for sign in box and sign up box. Resolved the issue with app bar covering the boxes

--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,4 @@
 body {
-  margin: 0;
-  padding: 0;
   font-family: sans-serif;
   background-color: #501f3a;
-}
-
-form {
-  padding: 20px;
-  margin-top: 60px;
-}
-
-form button,
-form h5 {
-  margin: 20px 0;
-}
-
-/* below highlights the underline to "border color" when user clicks on that field - email, password, fname and lname */
-input[type='text']:not(.browser-default):focus:not([readonly]),
-input[type='email']:not(.browser-default):focus:not([readonly]),
-input[type='password']:not(.browser-default):focus:not([readonly]),
-textarea.materialize-textarea:focus:not([readonly]) {
-  border-color: #ec407a;
-  box-shadow: none;
 }
